[REBUILD/UPGRADE REQUIRED] * Updated xPDO to revision 320. * Refactored all index.php gateways to support constructor options set as $options in the various config.core.php files. * modCacheManager/modCache 	- Introduced cache partitioning allowing various cache provider implementations to target specific MODx cache partitions and provide custom (system/context/user) settings for configuration options to each: 		- cache_system_settings 		- cache_context_settings 		- cache_resource 		- cache_scripts 		- cache_lexicon_topics 		- cache_action_map * modAccessibleObject 	- Refactored object and collection loader logic to improve cache hit rates. * modRequest 	- Fixed warning for undefined variable $fromCache. * modSessionHandler 	- Refactored write() method to only update access time when the session data has changed or at specified intervals before the data is made available for GC. 	- Added support for cache_db_session, a new configuration setting to allow session data to be cached when cache_db is enabled. * modTemplateVar 	- Allow getValue() to use a `value` field for data if already populated for a specific resource. * Tweaked the css and updated copyright year. * Manager Interface tweaks. * Fixing line breaks on recent commit. Please make sure your settings are set to UNIX line breaks on any further commits. * Fixing navbar text to make it readable. * Fixed issue with default properties in TVs being locked * Fixed no onTVFormPrerender * Made sure clearDirty is fired on TV panels * layout/tree/element/getnodes 	- fixed PHP notice for missing elementType variable 	- fixed subcategory elements missing from display (was counting elements in parent category rather then subcategory to determine if the subcategory should be displayed) * xPDOVehicle: 	- [#XPDO-28] Fixed problem with multiple file resolvers on vehicles with similar basenames cause directory contents to merge unexpectedly. * Fix issues with comboboxes dropping down a blue screen. * Added Import/Export to ele

--- a/manager/templates/default/css/style/navbar.css
+++ b/manager/templates/default/css/style/navbar.css
@@ -1,106 +1,127 @@
 #modx-home-icon {
-	width: 32px;
-	height: 32px;
-	float: left;
-	position: absolute;
-	left: .5em;
-	top: 4.3em;
-	background: transparent url(../../images/restyle/i/home.png) no-repeat top left;
-	opacity: .80;
-	}
+    width: 24px;
+    height: 24px;
+    float: left;
+    position: absolute;
+    left: 1.3em;
+    top: .5em;
+    background: transparent url(../../images/restyle/i/home.png) no-repeat top left;
+    opacity: .50;
+}
+
+#modx-home-icon :hover {
+    opacity: 1;
+}
+
 #modx-home-icon a {
-	width: 100%;
-	height: 100%;
-	display: block; 
-	}
+    width: 100%;
+    height: 100%;
+    display: block;
+}
+
 #modx-topnav-div {
     background: transparent;
-    padding: .55em 0 0;
+    padding: 6px 0 0;
     margin-left: 4em;
     position: relative;
     z-index: 500;
     width: 78%;
 }
+
 #modx-topnav {
     width: 100%;
 }
-#modx-topnav-div ul, 
-#modx-topnav-div li {
+
+#modx-topnav-div ul,#modx-topnav-div li {
     list-style: none;
     margin: 0;
     padding: 0;
 }
+
 #modx-topnav-div li.top {
     display: block;
     float: left;
     margin-right: 9px;
 }
+
 #modx-topnav-div a {
     padding: 0 12px;
     color: #fff;
     background-color: #333;
-    line-height: 30px;
+    line-height: 25px;
     display: block;
     float: left;
     text-decoration: none;
-    font-size: 1em;
     cursor: pointer;
 }
+
 #modx-topnav-div a:hover {
     background-color: #222;
 }
-#modx-topnav-div li .zone { display: none }
+
+#modx-topnav-div li .zone {
+    display: none
+}
 
 #modx-topnav-div li.top ul {
     width: 224px;
     clear: left;
 }
+
 li.top li.last {
     margin: 0;
     padding: 0 0 0 24px;
     height: 12px;
     line-height: 12px;
-    background: transparent url(../../images/restyle/i/bg-drop-last.png) no-repeat 0 0;
+    background: transparent url(../../images/restyle/i/bg-drop-last.png) no-repeat 0
+        0;
     float: none;
     clear: left;
     position: relative;
     overflow: visible;
 }
+
 li.top li.last span {
     display: block;
     width: 100%;
     position: absolute;
     bottom: 0;
     left: 24px;
-    background: transparent url(../../images/restyle/i/bg-drop-last.png) no-repeat 100% 0;
+    background: transparent url(../../images/restyle/i/bg-drop-last.png) no-repeat
+        100% 0;
 }
+
 #modx-topnav-div li:hover .zone {
     display: block;
     padding: 5px 30px 60px;
 }
+
 #modx-topnav-div li:hover .zone .zone {
     display: none;
     padding: 30px 30px 30px 5px;
 }
+
 #modx-topnav-div .top li:hover .zone {
     display: block;
 }
 
-#modx-topnav-div li.top,
-#modx-topnav-div li.flyout {
+#modx-topnav-div li.top,#modx-topnav-div li.flyout {
     position: relative;
 }
+
 #modx-topnav-div li.top li {
     display: block;
     float: none;
     width: 200px;
 }
+
 li.top .zone {
     position: absolute;
-    top: 25px;
-    left: -30px; 
-    opacity: .95;
+    top: 20px;
+    left: -30px;
+    opacity: 1;
 }
+
 .zone a {
     display: block;
     width: 100%;
@@ -108,18 +129,25 @@ li.top .zone {
     line-height: 30px;
     float: none;
 }
+
 .zone span.description {
     display: block;
     clear: left;
-    line-height: 1.2;
-    font-size: 1em;
-    color: #bbb;
+    line-height: 1.1;
+    font-size: .9em;
+    color: #999;
     margin-top: -4px;
     padding-bottom: 6px;
 }
+
 .zone a:hover {
     background-color: #222 !important;
 }
+
+.zone a:hover span.description {
+    color: #ddd !important;
+}
+
 li.flyout .zone {
     position: absolute;
     left: 219px;
@@ -127,6 +155,7 @@ li.flyout .zone {
     _top: 0;
     opacity: 1.0;
 }
+
 li.last li.flyout .zone {
     left: -228px; /* reverse the last one */
 }
